--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,17 @@
 # Azure Storage Configuration
 AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=your_account_name;AccountKey=your_account_key;EndpointSuffix=core.windows.net
+AZURE_STORAGE_CONTAINER=honeypot-logs
 
 # Application Insights
 APPINSIGHTS_INSTRUMENTATION_KEY=your_instrumentation_key
+
+# Optional Integrations
+NVD_API_KEY=your_nvd_api_key
+CLAUDE_API_KEY=your_claude_api_key
+
+# Safety
+# By default, password fields are redacted from logs. Set to "true" only in controlled environments.
+LOG_SENSITIVE_FIELDS=false
 
 # Flask Configuration
 FLASK_ENV=production
