--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,8 @@ numpy==1.26.2
 xgboost==2.0.3
 scikit-learn==1.3.2
 joblib==1.3.2
+requests==2.32.5
+anthropic
 azure-storage-blob==12.19.0
 azure-monitor-opentelemetry==1.2.0
 opencensus-ext-azure==1.1.13
