--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,26 @@ azure-monitor-opentelemetry==1.2.0
 opencensus-ext-azure==1.1.13
 python-dotenv==1.0.0
 gunicorn==21.2.0
+# Flask Web Framework
+Flask==3.0.0
+flask-cors==4.0.0
+gunicorn==21.2.0
+
+# Machine Learning - Match training versions!
+scikit-learn==1.5.2
+xgboost==2.1.3
+joblib==1.4.2
+
+# Data Processing
+pandas==2.2.3
+numpy==1.26.4
+
+# AI Integration
+anthropic==0.40.0
+
+# Cloud Storage
+azure-storage-blob==12.19.0
+
+# Utilities
+python-dotenv==1.0.1
+requests==2.32.3
