--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,23 @@
+# Flask Web Framework
 Flask==3.0.0
 flask-cors==4.0.0
 gunicorn==21.2.0
 
-pandas==2.2.3
-numpy==1.26.4
-xgboost==2.1.3
+# Machine Learning
 scikit-learn==1.5.2
+xgboost==2.1.3
 joblib==1.4.2
 
-requests==2.32.3
-anthropic==0.40.0
-python-dotenv==1.0.1
+# Data Processing
+pandas==2.2.3
+numpy==1.26.4
 
+# AI Integration - USING OPENAI
+openai==1.54.4
+
+# Cloud Storage
 azure-storage-blob==12.19.0
-azure-monitor-opentelemetry==1.2.0
-opencensus-ext-azure==1.1.13
+
+# Utilities
+python-dotenv==1.0.1
+requests==2.32.3
