update: XGBoost loader fallback, artifact checks, and misc fixes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,9 @@ APPINSIGHTS_INSTRUMENTATION_KEY=your_instrumentation_key
 
 # Optional Integrations
 NVD_API_KEY=your_nvd_api_key
-CLAUDE_API_KEY=your_claude_api_key
+
+# AI analysis (OpenAI) - used for threat analysis and remediation in /api/track and /api/analyze
+OPENAI_API_KEY=your_openai_api_key
 
 # Safety
 # By default, password fields are redacted from logs. Set to "true" only in controlled environments.
